--- a/MechICQ/MechICQ.vcxproj.filters
+++ b/MechICQ/MechICQ.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Protocol.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IniFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContactList.h">
